--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		// 如果使用 webpack 2+ 或 rollup，可以利用 tree-shake:
 		"module": "es2015",
 		"moduleResolution": "node",
-		"types": ["@dcloudio/types"],
+		"types": ["@dcloudio/types","node"],
 		"paths": {
 			"@vant/weapp/*": ["path/to/node_modules/@vant/weapp/dist/*"]
 		},
