--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 				"title": "微信小程序 [开发版]",
 				"env": {
 					"UNI_PLATFORM": "mp-weixin",
-					"REQUEST_URL": "http://192.168.31.247:3000/"
+					"REQUEST_URL": "http://192.168.31.247:3000/",
+					"CHAT_SOCKET_URL": "ws://192.168.31.247:3000/chat/chat"
 				},
 				"define": {
 					"MP-WEIXIN": true
